# toolwitness

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TOOLWITNESS_BACKLOG.md  mkdocs.yml  pyproject.toml  toolwitness.yaml.example
.cursor/rules/: toolwitness-verify.mdc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
backlog/: backlog.yaml
demo/: toolwitness-demo-report.html
demo/test-results/: fabrication-test-20260328-085107.json  fabrication-test-openai-20260328-100443.json  fabrication-test-openai-20260328-101122.json  fabrication-test-openai-20260328-101724.json
docs/: alerting-model.md  cli.md  command-quick-reference.md  contributing.md  coverage.md  gallery.md  getting-started.md  how-it-works.md  index.md  multi-agent.md  privacy.md  remediation.md  testing-results.md  why-open-source.md
docs/adapters/: anthropic.md  crewai.md  langchain.md  mcp.md  openai.md
examples/: anthropic_basic.py  cursor-rule-verify.md  langchain_basic.py  openai_basic.py
scripts/: backlog_report.py  benchmark.py  demo_data.py  replay_fixtures.py  seed_demo_data.py  test_live_fabrication.py
src/toolwitness/: __init__.py  __main__.py  config.py
src/toolwitness/adapters/: __init__.py  anthropic.py  crewai.py  langchain.py  mcp.py  openai.py
src/toolwitness/alerting/: __init__.py  channels.py  rules.py
src/toolwitness/cli/: __init__.py  main.py
src/toolwitness/core/: classifier.py  detector.py  monitor.py  receipt.py  types.py
src/toolwitness/dashboard/: __init__.py  server.py
src/toolwitness/mcp_server/: __init__.py  server.py
src/toolwitness/proxy/: __init__.py  http.py  stdio.py
src/toolwitness/reporting/: __init__.py  about_page.py  digest.py  html_report.py  remediation.py
src/toolwitness/storage/: base.py  sqlite.py
src/toolwitness/verification/: bridge.py  chain.py  schema.py  (+2 more)
tests/: SEMANTIC_TEST_PLAN.md  conftest.py  test_alerting.py  test_alerting_threshold.py  test_chain.py  test_classifier.py  test_cli.py  test_false_positives.py  test_integration.py  test_mcp_server.py  test_monitor.py  test_proxy.py  test_receipt.py  test_schema.py  test_semantic.py  test_structural.py  test_verification_scenarios.py  test_verify_bridge.py
tests/fixtures/: __init__.py
tests/test_adapters/: test_anthropic.py  test_crewai.py  test_langchain.py  test_mcp.py  test_openai.py
(+6 files in other folders)
